--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,22 +10,23 @@
 
 <body>
   <div class="wrapper">
-     <header>
-    <h1>
-      <a href="/">Just Tech News</a>
-    </h1>
-    <nav>
-      <a href="/login">login</a>
-    </nav>
-  </header>
+    <header>
+      <h1>
+        <a href="/">Just Tech News</a>
+      </h1>
+      <nav>
+        <button id="logout" class="btn-no-style">logout</button>
+        <a href="/login">login</a>
+      </nav>
+    </header>
     <main>
-      {{{ body }}}<!--data that will be plugged in later-->
+      {{{ body }}}
     </main>
     <footer>
       Thanks for visiting!
     </footer>
   </div>
 
+  <script src="/javascript/logout.js"></script>
 </body>
-
 </html>
